Added a database connection class to retrieve data from the database

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
 	    <artifactId>tablesaw-core</artifactId>
 	    <version>LATEST</version>
   	</dependency>
+  	<dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>5.1.39</version>
+	</dependency>
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
