Added  deeplearning4J dependencies in the pom.xml to support deeplearning in Java

--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,20 @@
 	    <artifactId>kumo-tokenizers</artifactId>
 	    <version>1.17</version>
 	</dependency>
-  </dependencies>
+	
+<!-- Adding a dependency for DeepLearning4J -->
+
+  <dependency>
+      <groupId>org.deeplearning4j</groupId>
+      <artifactId>deeplearning4j-core</artifactId>
+      <version>1.0.0-beta3</version>
+  </dependency>
+  <dependency>
+      <groupId>org.nd4j</groupId>
+      <artifactId>nd4j-native-platform</artifactId>
+      <version>1.0.0-beta3</version>
+  </dependency>
+</dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
